--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,8 @@
-name: Create release
+name: Release
 
 on:
-  push:
-    paths:
-      package.json
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -38,6 +37,3 @@ jobs:
           # pnpm dlx can-npm-publish --verbose
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Create GitHub Release
-        run: gh release create v$( cat package.json | jq -r '.version' ) --generate-notes
