--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A very small and ultrafast web framework",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "check": "tsc --noEmit"
+    "build": "tsc --project tsconfig.build.json",
+    "test": "tsc --noEmit && node --test"
   },
   "keywords": [],
   "license": "MIT",
