add nodejs types

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^22.13.4",
     "typescript": "^5.7.3"
   }
 }
