--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,36 @@
 {
   "compilerOptions": {
-    "target": "ES2024",
-    "module": "ES2022",
-    "declaration": true,
+    "target": "ES6",
+    "module": "ES6",
     "moduleResolution": "Bundler",
+
+    // Module
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": false,
+    "verbatimModuleSyntax": true,
+    "isolatedModules": true,
+    "forceConsistentCasingInFileNames": true, // Windows...
+
+    // Output
     "rootDir": "./src/",
-    "outDir": "./dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist/",
+    "declaration": true,
+    //"noEmitOnError": true,
+
+    //"allowImportingTsExtensions": true,
+    //"rewriteRelativeImportExtensions": true,
+
+    // Linting
     "strict": true,
-    // "erasableSyntaxOnly": true, // TypeScript 5.8
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noUncheckedSideEffectImports": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    //"erasableSyntaxOnly": true, // TypeScript 5.8
+    "isolatedDeclarations": true,
+
     "skipLibCheck": false,
     "types": [
       "node"
