--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^22.13.4",
+    "jsr": "^0.13.3",
     "typescript": "^5.7.3"
   }
 }
