--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
       "node"
     ]
   },
-  "include": [
-    "src/**/*.ts",
-  ],
+  // "include": [
+  //   "src/**/*.ts",
+  //   "scripts/**/*.ts",
+  // ],
 }
