--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       - run: pnpm install
       - run: pnpm run typecheck
       - run: pnpm run build
-      - run: pnpm dlx jsr publish --dry-run
+      - run: pnpm run jsr:publish --dry-run
 
   test:
     runs-on: ubuntu-latest
