--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
     "@types/node": "^22.13.4",
     "jsr": "^0.13.3",
     "typescript": "^5.7.3"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
   }
 }
