--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 
     // Module
     "esModuleInterop": false,
-    "allowSyntheticDefaultImports": false,
+    "allowSyntheticDefaultImports": true,
     "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "forceConsistentCasingInFileNames": true, // Windows...
